chore: add vscode and pre-commit settings, update dev requirements

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,6 +24,7 @@
                 "monosans.djlint",
                 "ms-python.black-formatter",
                 "ms-python.debugpy",
+                "ms-python.flake8",
                 "ms-python.isort",
                 "ms-python.python",
                 "ms-python.vscode-pylance"
