--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,11 +18,11 @@ repos:
       - id: isort
         name: isort (python)
         args: ["--settings-path=./pyproject.toml"]
-  - repo: https://github.com/pycqa/flake8
-    rev: 7.1.0
-    hooks:
-      - id: flake8
-        args: ["--config=./pyproject.toml"]
+  # - repo: https://github.com/pycqa/flake8
+  #   rev: 7.1.0
+  #   hooks:
+  #     - id: flake8
+  #       args: ["--config=./pyproject.toml"]
   - repo: https://github.com/Riverside-Healthcare/djLint
     rev: v1.34.1
     hooks:
