feat: setup celery and smtp

--- a/.devcontainer/docker-compose-dev.yml
+++ b/.devcontainer/docker-compose-dev.yml
@@ -18,6 +18,9 @@ services:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      - DEFAULT_FROM_EMAIL=noreply@meetmaster.com
     env_file:
       - path: ./.env
         required: true
