--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
       - db
       - redis
       - migration
+      - celery
+      - beat
     environment:
       - DEBUG=0
       - POSTGRES_DB=postgres
@@ -57,6 +59,24 @@ services:
     depends_on:
       - db
       - redis
+    environment:
+      - DEBUG=0
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      - DEFAULT_FROM_EMAIL=noreply@meetmaster.com
+
+  beat:
+    build: .
+    command: celery --workdir=/code/meetmaster -A meetmaster beat -l info
+    volumes:
+      - .:/usr/src/app
+    depends_on:
+      - db
+      - redis
+      - celery
     environment:
       - DEBUG=0
       - POSTGRES_DB=postgres
